sample/msvc/error/c2632.cpp
// C2632.cpp
int float i;   // C2632
